--- a/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/flex/style.css
+++ b/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/flex/style.css
@@ -12,6 +12,10 @@ body {
   font-size: 1.6rem;
 }
 
+p {
+  text-align: center;
+}
+
 .container1 {
   border: 0.3rem solid black;
   display: flex;
