--- a/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/challenge/using-flex/style.css
+++ b/curso_definitivo_html_css/repo-curso-definitivo-html-y-css-master/CSS/claseDisplay/challenge/using-flex/style.css
@@ -8,17 +8,21 @@ html{
     font-size: 62.5%;
 }
 
-header {
-    background-color: aqua;
+body {
+    display: flex;
+    flex-direction: column;
 }
 
-header > figure, nav{
-    display: inline-block;
-    vertical-align: middle;
+header {
+    background-color: #086eaa;
+    height: 7vh;
+    display: flex;
+    align-items: center;
 }
 
 figure img{
     width: 7rem;
+    margin-left: 2rem;
 }
 
 .bar-navigation{
@@ -29,19 +33,29 @@ figure img{
     font-size: 2rem;
 }
 
+.ul-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
 .ul-nav li {
     display: inline-block;
+    margin-left: 5rem;
 }
 
 .side-bar, .content{
-    display: inline-block;
     height: 80vh;
 }
 
+main {
+    display: flex;
+    flex-direction: row;
+}
+
 main .side-bar {
-    background-color: red;
+    background-color: #0f2b47;
     width: 25vw;
-    position: absolute;
 }
 
 .side-bar_items-container{
@@ -49,33 +63,29 @@ main .side-bar {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     height: 100%;
 }
 
 .side-bar_items-container div{
-    margin: 2rem;
-    background-color: lightskyblue;
-    height: 25%;
+    background-color: #0efff9;
+    height: 20%;
     width: 75%;
     border-radius: 5rem;
 }
 
 main .content {
-    background-color: blue;
+    background-color: #08bbff;
     width: 75vw;
-    vertical-align: top;
-    float: right;
-    padding: 2rem 4rem;
+    padding: 3rem;
 }
 
 footer {
-    background-color: green;
-    height: 15vh;
+    background-color: #140f07;
+    height: 13vh;
     width: 100%;
-    display: flex;
-    vertical-align: bottom;
     font-size: 2rem;
+    display: flex;
     align-items: center;
     justify-content: space-around;
-    
 }
